feat: Adiciona openapi.yml Documentation
